--- a/platform-config-derive/Cargo.toml
+++ b/platform-config-derive/Cargo.toml
@@ -7,8 +7,8 @@ authors = ["Marcin Sas-Szymanski <marcin.sas-szymanski@anixe.pl>"]
 syn = "0.12"
 quote = "0.4"
 proc-macro2 = "0.2"
-structopt = "*"
-structopt-derive = "*"
+structopt = "0.2.4"
+structopt-derive = "0.2.4"
 
 [lib]
 proc-macro = true
