--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Marcin Sas-Szymanski <marcin.sas-szymanski@anixe.pl>"]
 
 [dependencies]
-platform-config-derive = { path = "platform-config-derive" }
-config = "*"
-structopt = "*"
-structopt-derive = "*"
+platform-config-derive = { path = "platform-config-derive", version = "0.1.0" }
+config = "0.8.0"
+structopt = "0.2.4"
+structopt-derive = "0.2.4"
